<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:layout_marginTop="24dp"
        tools:context=".ui.ImcActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            >

            <ImageView
                android:id="@+id/imc_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:clickable="true"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_imc"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_weight="1"
                />
        </LinearLayout>


       <TextView
            style="@style/TextViewForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc_desc" />

        <EditText
            style="@style/EditTextForm"
            android:id="@+id/edit_imc_weight"
            android:hint="@string/weight" />

        <EditText
            style="@style/EditTextForm"
            android:id="@+id/edit_imc_height"
            android:hint="@string/height" />

        <Button
            style="@style/ButtonForm"
            android:id="@+id/btn_imc_send"
            android:text="@string/calc" />

    </LinearLayout>

</ScrollView>